# stt-craig-etl

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  etl.md  index.html  pyproject.toml  test.wav.srt  test.wav.vtt
docs/: etl.md  index.html
public/: index.html
resources/test/: test.wav.txt
src/: audioviz.py  etl.org
